fixed horizontal scroll on dashboard

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,7 +32,7 @@ header nav li a {
 
 #main-wrapper .main .heading-wrapper .heading {
   font-family: "Share Tech Mono", monospace;
-  font-size: 3rem;
+  font-size: 2.8rem;
   color: rgb(108, 40, 57);
 }
 
